<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.livelearn.ignorance.widget.TitleBar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/test_moving_image_view_movingimageview" />

            <com.livelearn.ignorance.widget.movingimageview.view.MovingImageView
                android:id="@+id/miv_moving"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@mipmap/pic_another_world"
                app:miv_load_on_create="true"
                app:miv_max_relative_size="3.0"
                app:miv_min_relative_offset="0.2"
                app:miv_repetitions="-1"
                app:miv_speed="100"
                app:miv_start_delay="1000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_next"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_next" />

                    <Button
                        android:id="@+id/btn_up_down"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_up_down" />

                    <Button
                        android:id="@+id/btn_left_right"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_left_right" />
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_lefttop_rightbottom"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_lefttop_rightbottom" />

                    <Button
                        android:id="@+id/btn_leftbottom_righttop"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_leftbottom_righttop" />

                    <Button
                        android:id="@+id/btn_loiter_around"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_loiter_around" />
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_stop_moving"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_stop_moving" />

                    <Button
                        android:id="@+id/btn_start_moving"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_start_moving" />

                    <Button
                        android:id="@+id/btn_default_moving"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_moving_image_view_default_moving" />
                </LinearLayout>
            </LinearLayout>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/test_moving_image_view_udlrmovingimageview" />

            <com.livelearn.ignorance.widget.movingimageview.view.UDLRMovingImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/pic_another_world"
                app:orientation="horizontal" />

            <com.livelearn.ignorance.widget.movingimageview.view.UDLRMovingImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/pic_another_world"
                app:orientation="vertical" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
